# Neural_network

./: .gitignore  Bitmap.txt  CMakeLists.txt  Camera  README.md
Neural_network/: CMakeLists.txt  Neural_network.cpp
Neural_network/Include/: Neural_network.hpp
Neural_network/Source/: Add_1000.txt  Neural_network.cpp  main.cpp  pbPlots.cpp  supportLib.cpp
